Khan Add & TODO u2

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 1. Replace other with Mongolia
 	Civilization Ability - Mongol Terror (similar to Civ 5, same as Germany in Civ 6) DONE
-	Leader Ability - Threatening Impression (Can levy the military of allied city states at a 10% discount) DONE
-	Add Khan
+	Leader Ability - The Yam (Recieves 25% less war weariness)
+	Add Khan DONE
 2. Add Images
 3. Add Music
 	
