--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 1. Replace other with Mongolia
 	Civilization Ability - Mongol Terror (similar to Civ 5, same as Germany in Civ 6) DONE
-	Leader Ability - The Yam (Recieves 25% less war weariness)
+	Leader Ability - The Yam (Receives 25% less war weariness)
 	Add Khan DONE
 2. Add Images
 3. Add Music
